Shorten package name for speech plugin; Remove unused type parameter from `ActivationPattern`

--- a/bloom-plugins/speech/gradle.properties
+++ b/bloom-plugins/speech/gradle.properties
@@ -1,6 +1,6 @@
 version=0.0.1
 
 pluginId=speech-plugin
-pluginClass=com.f1uctus.bloom.plugins.coreinterface.speech.SpeechPlugin
+pluginClass=com.f1uctus.bloom.plugins.speech.SpeechPlugin
 pluginProvider=Ilya Nikitin
 pluginDependencies=
