--- a/bloom-fx/src/main/resources/application.yml
+++ b/bloom-fx/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     banner-mode: off
   datasource:
     name: bloom
-    url: jdbc:h2:file:~/bloom;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=FALSE;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE
+    url: jdbc:h2:file:~/bloom
     username: sa
     password: pass
   sql:
