--- a/bloom-fx/src/test/resources/application.yml
+++ b/bloom-fx/src/test/resources/application.yml
@@ -3,6 +3,12 @@ spring:
     url: jdbc:h2:mem:bloom
     username: sa
     password: pass
+  jpa:
+    properties:
+      hibernate:
+        globally_quoted_identifiers: true
+        globally_quoted_identifiers_skip_column_definitions: true
+        enable_lazy_load_no_trans: true
 
 plugins:
-  root: ../bloom-plugins/build/plugins
+  roots: ./plugins,../plugins,./bloom-plugins/build/plugins,../bloom-plugins/build/plugins
